# CrazyTankGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  package.json
assets/engine/shaders/blinn_phong_pipeline/: BlinnPhongPipeline.frag.hlsl  BlinnPhongPipeline.frag.spv  BlinnPhongPipeline.vert.hlsl  BlinnPhongPipeline.vert.spv
assets/engine/shaders/flat_shading_pipeline/: FlatShadingPipeline.frag.hlsl  FlatShadingPipeline.frag.spv  FlatShadingPipeline.vert.spv
assets/engine/shaders/line_pipeline/: LinePipeline.frag.spv  LinePipeline.vert.spv
assets/engine/shaders/point_pipeline/: PointPipeline.frag.spv  PointPipeline.vert.spv
assets/engine/shaders/text_overlay_pipeline/: TextOverlay.frag.hlsl  TextOverlay.frag.spv  (+2 more)
assets/models/: enemy_tank.glb  player_tank.glb
assets/models/ships_kenny/: arrow.glb  boat-house-a.glb  boat-house-c.glb  boat-row-small.glb  boat-sail-a.glb  boat-sail-b.glb  boat-speed-a.glb  boat-speed-c.glb  boat-speed-e.glb  boat-speed-h.glb  boat-tow-b.glb  boat-tug-b.glb  buoy.glb  cargo-pile-a.glb  cargo-pile-b.glb  gate-finish.glb  ramp.glb  ship-cargo-a.glb  ship-cargo-c.glb  ship-small.glb
assets/models/test/: tank_0 (1).gltf  tank_0.glb  tank_1.glb  tank_2.glb
engine/asset_system/: AssetGLTF_Mesh.cpp  AssetGLTF_Mesh.hpp
engine/bedrock/: BedrockCommon.hpp  BedrockMath.hpp
engine/entity_system/: Transform.cpp  Transform.hpp
engine/importer/: ImportGLTF.cpp
engine/libs/libconfig/: CMakeLists.txt  LibConfig.cpp
engine/physics_2d/: AABB2D.cpp  AABB2D.hpp  CMakeLists.txt  Physics2D.cpp  Physics2D.hpp  imgui.ini
engine/render_system/: CMakeLists.txt  LogicalDevice.cpp  LogicalDevice.hpp  RenderBackend.cpp  RenderBackend.hpp  UI.hpp
engine/render_system/camera/: ArcballCamera.cpp  ArcballCamera.hpp  ObserverCamera.cpp  ObserverCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  imgui.ini
engine/render_system/pipeline/: BlinnPhongPipeline.cpp  BlinnPhongPipeline.hpp  FlatShadingPipeline.cpp  FlatShadingPipeline.hpp  IShadingPipeline.h  TextOverlayPipeline.cpp  TextOverlayPipeline.hpp
engine/render_system/render_pass/: DisplayRenderPass.cpp  DisplayRenderPass.hpp
engine/render_system/utils/: ConsolasFontRenderer.cpp  ConsolasFontRenderer.hpp  MeshInstance.cpp  MeshInstance.hpp  MeshRenderer.cpp  MeshRenderer.hpp
engine/time_system/: CMakeLists.txt  Time.cpp  Time.hpp
executables/crazy-tank-game/: AABB2D.cpp  AABB2D.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  CrazyTankGameApp.cpp  CrazyTankGameApp.hpp  CrazyTankGameMain.cpp  FollowCamera.cpp  FollowCamera.hpp  Gameplay.cpp  Gameplay.hpp  Layers.hpp  Map.cpp  Map.hpp  PathFinder.cpp  PathFinder.hpp  Physics2D.cpp  Physics2D.hpp  Tank.cpp  Tank.hpp  TankEntity.cpp  TankEntity.hpp  imgui.ini
executables/mesh-viewer/: CMakeLists.txt  MeshViewerMain.cpp  imgui.ini
(+26 files in other folders)
